[package]
name = "parser_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
regex = { version="1.3", default-features = false, features = ["perf", "std", "unicode"] }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }